# programasweights-python

./: .gitignore  AGENTS.md  CHANGELOG.md  PYPI_README.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api-reference.rst  architecture.md  index.md  index.rst  installation.rst  quickstart.rst  using-pretrained.rst
docs/adr/: 001-llama-cpp-over-pytorch.md  002-q4_0-adapter-format.md  003-single-spec-field.md  004-compiler-naming.md  005-vllm-hidden-states.md  006-email-api-key-auth.md
docs/advanced/: adrs.md  architecture.md
docs/api-reference/: cli.md  python-sdk.md  rest-api.md
docs/case-studies/: alien-taboo.md  log-monitoring.md  semantic-search.md  site-navigation.md  tool-calling.md
docs/examples/: evaluation-tasks.rst
docs/getting-started/: first-program.md  installation.md  naming-programs.md
docs/guide/: browser-inference.md  how-it-works.md  local-inference.md  writing-good-specs.md
docs/hub/: browsing-programs.md  feedback-cases.md  publishing-programs.md
examples/: flask_app.py  jupyter_notebook.py  langchain_integration.py  paw_monitor.py  replace_openai.py
programasweights/: __init__.py  _output.py  cache.py  cli.py  client.py  config.py  convert_peft_to_paw.py  paw_format.py  runtime_llamacpp.py
programasweights/compiler/: __init__.py  dummy.py
programasweights/runtime/: __init__.py  interpreter.py  interpreter_onnx.py
tests/: test_base_interpreter.py  test_cli_auth.py  test_desktop_sdk.py  test_offline_cache.py  test_runtime_registry_sdk.py  test_sdk.py  test_sdk.sh
