[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "programasweights"
version = "0.2.2"
description = "Compile natural language specifications into neural programs that run locally via llama.cpp."
readme = "PYPI_README.md"
requires-python = ">=3.9"
authors = [
  { name = "ProgramAsWeights", email = "support@programasweights.com" }
]
license = { text = "MIT" }
keywords = ["nlp", "neural-programs", "lora", "llama-cpp", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0,<1.0",
  "llama-cpp-python>=0.3.0,<=0.3.18",
]

[project.urls]
Homepage = "https://programasweights.com"
Repository = "https://github.com/programasweights/programasweights-python"
Documentation = "https://programasweights.readthedocs.io"
"Bug Tracker" = "https://github.com/programasweights/programasweights-python/issues"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
paw = "programasweights.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["programasweights"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "strict"
